Stopped being lazy and moved away from filter:invert for dark mode.Cleaned up some CSS, did some adjustments on the Modal CSS as well

--- a/app/components/Footer/styles.scss
+++ b/app/components/Footer/styles.scss
@@ -5,7 +5,6 @@ footer {
     height: 50px;
 
     &::after {
-        font-family: Raleway, sans-serif;
         font-size: 15px;
 
         display: flex;
@@ -17,8 +16,8 @@ footer {
 
         content: '©Copyright ' attr(data-copyright) ' - David Friedrich';
 
-        border-top: 1px solid #ceced0;
-        background: #e06b57;
+        border-top: 1px solid var(--footer-border-top);
+        background: var(--primary-color);
 
         align-items: center;
     }
