--- a/app/components/Header/styles.scss
+++ b/app/components/Header/styles.scss
@@ -8,8 +8,8 @@ nav {
     width: 100%;
     height: 40px;
 
-    border-bottom: 1px solid #ceced0;
-    background: #e06b57;
+    border-bottom: 1px solid var(--header-bottom);
+    background: var(--primary-color);
 
     justify-content: flex-end;
 
@@ -54,7 +54,7 @@ header {
     margin-bottom: 50px;
     padding-bottom: 25px;
 
-    border-bottom: 1px solid #ceced0;
+    border-bottom: 1px solid var(--header-bottom);
 
     justify-content: center;
 
@@ -74,7 +74,6 @@ header {
         padding-top: 100px;
 
         h1 {
-            font-family: 'Raleway', sans-serif;
             font-size: 60px;
             font-weight: 400;
 
@@ -82,12 +81,9 @@ header {
 
             letter-spacing: 1px;
             text-transform: uppercase;
-
-            color: #3a3935;
         }
 
         h2 {
-            font-family: 'Raleway', sans-serif;
             font-size: 25px;
             font-weight: 300;
 
@@ -97,55 +93,6 @@ header {
 
             letter-spacing: 0.5px;
             text-transform: uppercase;
-
-            .language {
-                position: relative;
-
-                width: 152px;
-                height: 30px;
-                margin-right: 10px;
-
-                cursor: grabbing;
-                transition: all 0.8s ease-in;
-
-                perspective: 1000px;
-                transform-style: preserve-3d;
-
-                &:hover {
-                    transform: rotateX(180deg);
-
-                    .front {
-                        z-index: 1;
-                    }
-                }
-
-                .front {
-                    z-index: 100;
-
-                    backface-visibility: hidden;
-                }
-
-                .back {
-                    z-index: 102;
-
-                    //transform: rotateY(-180deg);
-                }
-
-                .front,
-                .back {
-                    position: absolute;
-
-                    display: flex;
-
-                    width: 100%;
-                    height: 100%;
-
-                    background: #e5e3e6;
-
-                    align-items: center;
-                    justify-content: center;
-                }
-            }
         }
     }
 
@@ -159,7 +106,12 @@ header {
         margin: 0;
         padding: 0;
 
-        border-left: 2px solid #272727;
+        border-left: 2px solid var(--header-divider);
+
+        &::before,
+        &::after {
+            font-family: var(--divider-font);
+        }
 
         &::before {
             font-size: 42px;
@@ -173,7 +125,7 @@ header {
             content: '\00B0\a\00B0\a\00B0';
             white-space: pre-wrap;
 
-            color: #e06b57;
+            color: var(--primary-color);
         }
 
         &::after {
@@ -188,7 +140,7 @@ header {
             content: '\2022\A\2022\A\2022';
             white-space: pre-wrap;
 
-            color: #e5e3e6;
+            color: var(--section-divider-bg);
         }
 
         li {
@@ -203,7 +155,7 @@ header {
             &.looking {
                 text-decoration: underline;
 
-                color: #e06b57;
+                color: var(--primary-color);
 
                 text-underline-offset: 8px;
 
@@ -217,26 +169,12 @@ header {
             }
 
             span {
-                font-family: 'Raleway', sans-serif;
                 font-size: 20px;
                 font-weight: 400;
 
                 margin-left: 10px;
 
                 letter-spacing: 2px;
-
-                a {
-                    font-weight: 600;
-
-                    transition: color 550ms ease-in-out;
-                    text-decoration: none;
-
-                    color: #3a3935;
-
-                    &:hover {
-                        color: #e06b57;
-                    }
-                }
             }
         }
     }
