--- a/app/components/Skills/styles.scss
+++ b/app/components/Skills/styles.scss
@@ -28,7 +28,7 @@
             strong {
                 font-weight: 700;
 
-                background: #e06b57;
+                background: var(--primary-color);
             }
         }
     }
